--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,10 @@
     box-sizing: border-box;
 }
 body {
-    /* background-color: #ffd5c2; */
     background-image: url(../images/background.jpg);
-background-size: cover;
+    background-size: cover;
     color: #588b8b;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    /* margin: 0px; */
     text-align: center;
 }
 h1 {
@@ -23,43 +21,21 @@ p {
     margin: 0px;
     padding-bottom: 5px;
 }
-table {
-    margin:auto;
-    background-color: white;
-    border: solid #406161 2px;
-}
-.cell {
-    height: 32px;
-    width: 32px;
-    background-color: #e6cae5;
-    text-align: center;
-    color: #406161;
-}
-.covered {
-    background-color: rgb(65, 79, 92);
-    box-shadow: inset 0px 0px 10px 0px #000000;
-}
-.covered:hover {
-    background-color: rgb(89, 108, 126);
-}
-.clicked-mine {
-    background-color: #c8553d;
-}
 .games-functions {
     text-align: center;
     margin: 0px;
 }
 .levels {
-/* background-color: #eedad1; */
-margin: 0px;
-padding: 10px;
+    margin: 0px;
+    padding: 10px;
 }
 .game-info {
     background-color: #557979;
     margin: auto;
+    position: static;
     height: 45px;
     width: 700px;
-    color:#ffd5c2;
+    color: #ffd5c2;
     font-size: 20px;
     margin-bottom: 10px;
     margin-top: 5px;
@@ -71,51 +47,54 @@ padding: 10px;
 }
 .lives {
     display:inline;
-    margin:0px 20px 10px 20px;
+    margin: 0px 20px 10px 20px;
     font-size: 25px;
     color: rgb(240, 92, 92)
 }
 .hints {
-    display:inline;
-    margin:0px 20px 10px 20px;
+    display: inline;
+    margin: 0px 20px 10px 20px;
 }
 .hinted {
-    text-shadow: 4px 4px 7px #0b2a1b
+    text-shadow: 4px 4px 7px #0b2a1b;
 }
 .safe-click {
     display:inline;
     margin-left: 10px;
     font-size: 12px;
 }
-.safe-click button {
+.undo {
+    display:inline;
+    margin-left: 10px;
+    font-size: 12px;
+}
+button {
     height: 20px;
     width: 60px;
     font-size: 9px;
     background-color: #cca7c2;
     color: #243333;
     border-radius: 5px;
-    margin-left:10px;
+    margin-left: 10px;
     margin-bottom: 20px;
-}
-.safe-cell {
-    background-color: rgb(211, 133, 211);
 }
 .smiley {
     font-size: 35px;
 
 }
 .best-score {
-    /* display: inline; */
     position:fixed;
     background-color: rgb(255, 255, 255);
     width: 200px;
     height: 200px;
-    /* margin-left: 150px; */
     border: solid #406161 5px;
-    margin-top: 5px;;
+    margin-top: 5px;
     margin-left: 5px;
     padding-top: 10px;
 }
-ul {
-    list-style:none;
+.footer {
+    bottom: 0px;
+    margin-left: 47%;
+    position: absolute;
+    font-size: 15px;
 }
